# rustkell

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  pairs.rs  rustkell.rs  tails.rs
src/datalist/: mod.rs  tails.rs
