[package]
name = "rustkell"
version = "0.1.0"
authors = ["Anicka Burova <anicka.burova@gmail.com>"]
license = "MIT"
description = "Rustkell is haskell like functions in rust."

homepage = "https://github.com/AnickaBurova/rustkell"
repository = "https://github.com/AnickaBurova/rustkell"
documentation = "https://docs.rs/rustkell/0.1.0/rustkell/"

readme = "README.md"
keywords = ["haskell", "tails", "datalist"]


[dependencies]
