[package]
name = "rustkell"
version = "0.2.2"
authors = ["Anicka Burova <anicka.burova@gmail.com>"]
license = "MIT"
description = "Rustkell is haskell like functions in rust."

homepage = "https://github.com/AnickaBurova/rustkell"
repository = "https://github.com/AnickaBurova/rustkell"

readme = "README.md"
keywords = ["haskell", "tails", "datalist"]


[dependencies]
